--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "gurupirate",
-    "version": "0.2.0",
+    "version": "0.2.1",
   
     "description": "Disable annoying paywalls on GuruFocus",
     "content_scripts": [
@@ -17,5 +17,11 @@
         "activeTab",
         "tabs",
         "storage"
-    ]
+    ],
+    "icons":
+        {
+            "64":"./assets/logo.png"
+        }
+    
+    
 }
